# PhyRD

./: .gitignore  .gitmodules  BASELINE_REGISTRY.yaml  CHANGELOG.md  DECISIONS.yaml  DIFFUSION_FAILURE_ANALYSIS.md  EXPERIMENT_REGISTRY.csv  GATES.md  LICENSE_LEDGER.md  PROTOCOL.yaml  PhyRD_JDIR_联合形变-强度扩散_设计报告_v11.md  PhyRD_工程化模型组合与实验目录重构方案_v11.md  README.md  environment-sdir.yml  environment.yml  idea_report_master_v10.md  implementation_v10.md  pyproject.toml  user_requirements_v10.md
configs/archive/: train_8gpu_seeds.yaml  train_ddp8_deterministic_diffcast_5to20.yaml  train_residual_sevir.yaml  (+8 more)
data/: README.md
docs/: ADR-001_CODEBASE_STRATEGY.md  BASELINE_AUDIT.md  GIT_WORKFLOW.md  IMPLEMENTATION_STATUS.md  SERVER_VALIDATION.md  WEATHER30537_RUN.md
legacy/: README.md
scripts/: __init__.py  analyze_prediction_artifacts.py  audit_sevir_splits.py  bootstrap_env.sh  calibrate_risk.py  cuda_probe.py  estimate_residual_stats.py  evaluate.py  launch_ddp8.sh  launch_multigpu.py  precompute_trends.py  run_b1_formal_split_5to20.sh  run_b1_training_5to20.sh  run_probability_unit_checks.py  run_residual_eval_latest_tmux.sh  run_residual_eval_tmux.sh  run_sdir_eval_baseline_tmux.sh  smoke_test.py  train.py  validate_residual_stability.py  validate_sdir_cuda.py  validate_sdir_remote.sh
tests/: test_checkpoint_policy.py  test_config_contract.py  test_data_contract.py  test_deterministic_registry.py  test_evaluation_cli.py  test_metrics.py  test_model_composition.py  test_model_shapes.py  test_proximal_and_diffusion.py  test_risk_calibration.py  test_warp_and_transport.py
(+77 files in other folders)
