[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phyrd"
version = "0.1.0"
description = "Reliability-gated weak-transport residual diffusion for precipitation nowcasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4,<2.5",
  "torchvision>=0.19,<0.20",
  "numpy>=1.24",
  "pandas>=2.0",
  "h5py>=3.9",
  "PyYAML>=6.0",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "lpips>=0.1.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
